--- a/maquette2.html
+++ b/maquette2.html
@@ -65,7 +65,7 @@
                             <img src="icon-imgs/Icon.png" alt="">
                         </div>
                         <div class="programs-details">
-                            <h3>start program</h3>
+                            <h3>middle program</h3>
                             <p>if we love someone deeply, be they friends, family or lovers. dont't the relationship</p>
                             <button>detail</button>
                         </div>
@@ -75,7 +75,7 @@
                             <img src="icon-imgs/Icon3.png" alt="">
                         </div>
                         <div class="programs-details">
-                            <h3>start program</h3>
+                            <h3>expert program</h3>
                             <p>if we love someone deeply, be they friends, family or lovers. dont't the relationship</p>
                             <button>detail</button>
                         </div>
@@ -90,7 +90,7 @@
                 <div class="section-center-items1">
                     <div class="new-features">
                         <div class="new-imgs">
-                            <img src="icon-imgs/pexels-pixabay-315938.jpg" alt="">
+                            <img src="icon-imgs/img4.jpg" alt="New features image">
                             <h1>new!</h1>
                         </div>
                         <button>$ 19.99</button>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="new-features">
                         <div class="new-imgs">
-                            <img src="icon-imgs/pexels-pixabay-315938.jpg" alt="">
+                            <img src="icon-imgs/pexels-pixabay-315938.jpg" alt="New features image">
                             <h1>new!</h1>
                         </div>
                         <button>$ 19.99</button>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="new-features">
                         <div class="new-imgs">
-                            <img src="icon-imgs/pexels-pixabay-315938.jpg" alt="">
+                            <img src="icon-imgs/pexels-essow-k-936722.jpg" alt="New features image">
                             <h1>new!</h1>
                         </div>
                         <button>$ 19.99</button>
