--- a/maquette2.html
+++ b/maquette2.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="maquette2.css">
+    <link rel="shortcut icon" href="icon-imgs/_Group_.png" type="image/x-icon">
+
     <title>Maquette2</title>
 </head>
 <body>
@@ -154,9 +156,10 @@
                 <div class="top-links">
                     <h2>folliw us</h2>
                     <div class="icon">
-                        <img src="icon-imgs/circle-question-solid.svg" alt="">
-                        <img src="icon-imgs/facebook-f.svg" alt="">
-                        <img src="icon-imgs/twitter.svg" alt="">
+                        <img src="icon-imgs/facebook.png" alt="">
+                        <img src="icon-imgs/Icon5.png" alt="">
+                        <img src="icon-imgs/google+.png" alt="">
+                        <img src="icon-imgs/twitter2.png" alt="">
                     </div>
                 </div>
                 <div class="bottom-links">
@@ -193,7 +196,7 @@
                 </div>
             </div>
             <div class="footer-links">
-                <img src="icon-imgs/new texas.png" alt="">
+                <img src="icon-imgs/Image.png" alt="">
                 </div>
             </div>
         </div>
