--- a/maquette5.html
+++ b/maquette5.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="maquette2.css">
+    <link rel="stylesheet" href="maquette3.css">
+    <link rel="stylesheet" href="maquette5.css">
+    <link rel="shortcut icon" href="icon-imgs/_Group_.png" type="image/x-icon">
+
     <title>Maquette 5</title>
 </head>
 <body>
@@ -15,42 +19,170 @@
                     <h1>zeusland</h1>
                 </div>
                 <div class="links">
-                    <a href="#">home</a>
+                    <a href="maquette2.html">home</a>
                     <a href="maquette3.html">our services</a>
                     <a href="maquett4.html">about us</a>
                     <a href="maquette5.html">contact</a>
                 </div>
             </div>
         </div>
-        <div class="ctr">
-            <div class="ctr-center">
+    </header>
+    <main>
+        <section class="section-one-1"> 
+            <div class="section-one-center">
                 <h3>welcome to the great</h3>
                 <h1 class="title">
                     <img src="icon-imgs/_Group_.png" alt="">
                     zeusland
                 </h1>
-                <p>he printing and typese thing industry. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, dolorem.</p>
-                <button>our great business</button>
             </div>
-            <div class="arrow-left">
-                <div></div>
-                <div></div>
+        </section>
+        <section class="contacts-btns-section">
+            <div class="contacts-btns-section-container">
+                <div class="contact-bottons">
+                    <div class="cart-nice-support">
+                        <h2>nice support!</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, porro?</p>
+                    </div>
+                    <div class="cart-nice-support">
+                        <h2>nice support!</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, porro?</p>
+                    </div>
+                    <div class="cart-nice-support">
+                        <h2>nice support!</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, porro?</p>
+                    </div>
+                </div>
+                <div class="contact-bottons">
+                    <div class="cart-nice-support">
+                        <h2>nice support!</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, porro?</p>
+                    </div>
+                    <div class="cart-nice-support">
+                        <h2>nice support!</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, porro?</p>
+                    </div>
+                    <div class="cart-nice-support">
+                        <h2>nice support!</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, porro?</p>
+                    </div>
+                </div>
             </div>
-            <div class="arrow-right">
-                <div></div>
-                <div></div>
+        </section>
+        <section class="pricelist-section">
+            <div class="pricelist-section-container">
+                <h1>our pricelist</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi ipsum praesentium iste rerum optio maxime et illo quae ipsam quasi. illo quae ipsam quasi.</p>
+                <div class="pricelist-discounts">
+                    <div class="discounts-carts">
+                        <h2><span>92$</span> <br>
+                        discount 10%</h2>
+                        <ul>
+                            <li>golden packages</li>
+                            <li>golden packages</li>
+                            <li>golden packages</li>
+                        </ul>
+                        <button>subscribe now!</button>
+                    </div>
+                    <div class="discounts-carts">
+                        <h2><span>92$</span> <br>
+                        discount 10%</h2>
+                        <ul>
+                            <li>golden packages</li>
+                            <li>golden packages</li>
+                            <li>golden packages</li>
+                        </ul>
+                        <button>subscribe now!</button>
+                    </div>
+                    <div class="discounts-carts">
+                        <h2><span>92$</span> <br>
+                        discount 10%</h2>
+                        <ul>
+                            <li>golden packages</li>
+                            <li>golden packages</li>
+                            <li>golden packages</li>
+                        </ul>
+                        <button>subscribe now!</button>
+                    </div>
+                    <div class="discounts-carts">
+                        <h2><span>92$</span> <br>
+                        discount 10%</h2>
+                        <ul>
+                            <li>golden packages</li>
+                            <li>golden packages</li>
+                            <li>golden packages</li>
+                        </ul>
+                        <button>subscribe now!</button>
+                    </div>
+                </div>
             </div>
-        </div>
-    </header>
+        </section>
+        <section class="contact-us">
+            <div class="contact-us-container">
+                <div class="contact-input">
+                    <div>
+                        <h1>get <span>30%</span> free!</h1>
+                        <h2>by subscibing now !</h2>
+                        <form>
+                            <button>subscribe now!</button>
+                            <input type="email">
+                        </form>
+                    </div>
+                </div>
+                <div class="contact-oulils">
+                    <h1>contact us!</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat omnis ipsum ex nulla sunt eaque.</p>
+                    <div class="contact-social-media">
+                        <div class="social-media">
+                            <img src="icon-imgs/facebook.png" alt="">
+                            <div>
+                                <h3>facebook</h3>
+                                <h4>zeus lan business</h4>
+                            </div>
+                        </div>
+                        <div class="social-media">
+                            <img src="icon-imgs/twitter2.png" alt="">
+                            <div>
+                                <h3>twitter</h3>
+                                <h4>zeus lan business</h4>
+                            </div>
+                        </div>
+                        <div class="social-media">
+                            <img src="icon-imgs/Icon5.png" alt="">
+                            <div>
+                                <h3>instagram</h3>
+                                <h4>zeus lan business</h4>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <img src="icon-imgs/tele.png" alt="">
+                            <div>
+                                <h4>+230456786255 22 phone</h4>
+                                <h4>+23 2453823476 32 fax mail</h4>
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <img src="icon-imgs/location.png" alt="">
+                            <div>
+                                <h4>porkkalankatu 5, F1-00180 ABC</h4>
+                                <h4>helsinki, finland</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="footer-center">
             <div class="footer-links">
                 <div class="top-links">
                     <h2>folliw us</h2>
                     <div class="icon">
-                        <img src="icon-imgs/circle-question-solid.svg" alt="">
-                        <img src="icon-imgs/facebook-f.svg" alt="">
-                        <img src="icon-imgs/twitter.svg" alt="">
+                        <img src="icon-imgs/facebook.png" alt="">
+                        <img src="icon-imgs/Icon5.png" alt="">
+                        <img src="icon-imgs/google+.png" alt="">
+                        <img src="icon-imgs/twitter2.png" alt="">
                     </div>
                 </div>
                 <div class="bottom-links">
