--- a/maquette2.html
+++ b/maquette2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="maquette2.css">
     <link rel="shortcut icon" href="icon-imgs/_Group_.png" type="image/x-icon">
 
-    <title>Maquette2</title>
+    <title>Zeusland</title>
 </head>
 <body>
     <header>
@@ -197,7 +197,7 @@
             </div>
             <div class="footer-links">
                 <img src="icon-imgs/Image.png" alt="">
-                </div>
+            </div>
             </div>
         </div>
     </footer>
