--- a/maquette4.html
+++ b/maquette4.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="maquette2.css">
     <link rel="stylesheet" href="maquette4.css">
     <link rel="shortcut icon" href="icon-imgs/_Group_.png" type="image/x-icon">
-    <title>Maquette 4</title>
+    <title>Zeusland</title>
 </head>
 <body>
     <header>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="aside-container-content">
                         <div class="business-services-card">
-                            <h2><img src="icon-imgs/_Group_.png" alt="">
+                            <h2><img src="icon-imgs/Icon10.png" alt="">
                                 business services
                             </h2>
                             <p>
@@ -60,7 +60,7 @@
                             </p>
                         </div>
                         <div class="business-services-card">
-                            <h2><img src="icon-imgs/_Group_.png" alt="">
+                            <h2><img src="icon-imgs/Icon11.png" alt="">
                                 business services
                             </h2>
                             <p>
@@ -100,34 +100,13 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident aliquid perferendis possimus? Minus perferendis inventore laborum nemo necessitatibus nobis sint.</p>
                         <div class="our-products-support-icons">
                             <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
+                                <img src="icon-imgs/Icon13.png" alt="">
                             </div>
                             <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
+                                <img src="icon-imgs/Icon3.png" alt="">
                             </div>
                             <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="our-products">
-                    <div class="our-products-title">
-                        <h1>our products!</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum incidunt consectetur .</p>
-                    </div>
-                    <div class="our-products-support">
-                        <button>nice support!</button>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident aliquid perferendis possimus? Minus perferendis inventore laborum nemo necessitatibus nobis sint.</p>
-                        <div class="our-products-support-icons">
-                            <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
-                            </div>
-                            <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
-                            </div>
-                            <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
+                                <img src="icon-imgs/Icon12.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -142,13 +121,34 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident aliquid perferendis possimus? Minus perferendis inventore laborum nemo necessitatibus nobis sint.</p>
                         <div class="our-products-support-icons">
                             <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
+                                <img src="icon-imgs/Icon13.png" alt="">
                             </div>
                             <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
+                                <img src="icon-imgs/Icon3.png" alt="">
                             </div>
                             <div>
-                                <img src="icon-imgs/Icon4.png" alt="">
+                                <img src="icon-imgs/Icon12.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="our-products">
+                    <div class="our-products-title">
+                        <h1>our products!</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum incidunt consectetur .</p>
+                    </div>
+                    <div class="our-products-support">
+                        <button>nice support!</button>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident aliquid perferendis possimus? Minus perferendis inventore laborum nemo necessitatibus nobis sint.</p>
+                        <div class="our-products-support-icons">
+                            <div>
+                                <img src="icon-imgs/Icon13.png" alt="">
+                            </div>
+                            <div>
+                                <img src="icon-imgs/Icon3.png" alt="">
+                            </div>
+                            <div>
+                                <img src="icon-imgs/Icon12.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                     <h2>our founder!</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, modi?</p>
                     <div class="our-founder-target">
-                        <img src="icon-imgs/_Group_.png" alt="">
+                        <img src="icon-imgs/Icon15.png" alt="">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, consectetur.</p>
                     </div>
                     <div>
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="footer-links">
-                <img src="icon-imgs/new texas.png" alt="">
+                <img src="icon-imgs/Image.png" alt="">
                 </div>
             </div>
         </div>
