--- a/maquette5.html
+++ b/maquette5.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="maquette5.css">
     <link rel="shortcut icon" href="icon-imgs/_Group_.png" type="image/x-icon">
 
-    <title>Maquette 5</title>
+    <title>Zeusland</title>
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
                 <div class="links">
                     <a href="maquette2.html">home</a>
                     <a href="maquette3.html">our services</a>
-                    <a href="maquett4.html">about us</a>
+                    <a href="maquette4.html">about us</a>
                     <a href="maquette5.html">contact</a>
                 </div>
             </div>
@@ -219,7 +219,7 @@
                 </div>
             </div>
             <div class="footer-links">
-                <img src="icon-imgs/new texas.png" alt="">
+                <img src="icon-imgs/Image.png" alt="">
                 </div>
             </div>
         </div>
