--- a/maquette3.html
+++ b/maquette3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="maquette3.css">
     <link rel="shortcut icon" href="icon-imgs/_Group_.png" type="image/x-icon">
 
-    <title>Maquette 3</title>
+    <title>Zeusland</title>
 </head>
 <body>
     <header>
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <div class="footer-links">
-                <img src="icon-imgs/new texas.png" alt="">
+                <img src="icon-imgs/Image.png" alt="">
                 </div>
             </div>
         </div>
